Fix skip links visibility on focus

--- a/stylesheets/abstracts/_mixins.scss
+++ b/stylesheets/abstracts/_mixins.scss
@@ -405,6 +405,8 @@
 
 	&:active,
 	&:focus {
+		position: static !important;
+
 		width: auto !important;
 		height: auto !important;
 
