--- a/stylesheets/layout/_navigation.scss
+++ b/stylesheets/layout/_navigation.scss
@@ -47,6 +47,10 @@ nav a {
 .skip-links {
 }
 
+.skip-links a {
+	@include visually-hidden--focusable;
+}
+
 /* pagination
 ---------------------------------------------------------------------------- */
 .pagination {
